# OOP-cpp

./: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Belladonna.cpp  Belladonna.h  CMakeLists.txt  Dandelion.cpp  Dandelion.h  Entity.cpp  Entity.h  Entry.h  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Hogweed.cpp  Hogweed.h  Human.cpp  Human.h  IControllable.h  InputKeyMap.h  Journal.cpp  Journal.h  Plant.cpp  Plant.h  Position.h  RenderBatch.cpp  RenderBatch.h  SerializationContext.cpp  SerializationContext.h  Serializer.cpp  Serializer.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  (+4 more)
